--- a/android-application/ChineseCheckers/src/main/AndroidManifest.xml
+++ b/android-application/ChineseCheckers/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 
     <application
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -21,6 +22,22 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="ca.brocku.chinesecheckers.HotseatConfigurationActivity"
+            android:label="@string/title_activity_hotseat_configuration"
+            android:parentActivityName="ca.brocku.chinesecheckers.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
+        </activity>
+        <activity
+            android:name="ca.brocku.chinesecheckers.HotseatGameActivity"
+            android:label="@string/title_activity_hotseat_game"
+            android:parentActivityName="ca.brocku.chinesecheckers.HotseatConfigurationActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="HotseatConfigurationActivity" />
         </activity>
     </application>
 
