--- a/android-application/build.gradle
+++ b/android-application/build.gradle
@@ -1,1 +1,39 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+  repositories {
+    mavenCentral()
+  }
+
+  dependencies {
+    classpath 'com.android.tools.build:gradle:0.4'
+  }
+}
+
+apply plugin: 'android'
+
+android {
+  compileSdkVersion 16
+  buildToolsVersion '17'
+
+  sourceSets {
+    main {
+      manifest.srcFile 'AndroidManifest.xml'
+      java.srcDirs = ['src']
+      resources.srcDirs = ['src']
+      renderscript.srcDirs = ['src']
+      res.srcDirs = ['res']
+      assets.srcDirs = ['assets']
+    }
+
+    instrumentTest.setRoot('tests')
+    instrumentTest {
+      java.srcDirs = ['tests/src']
+      res.srcDirs = ['tests/res']
+      assets.srcDirs = ['tests/assets']
+      resources.srcDirs = ['tests/src']
+    }
+  }
+
+  dependencies {
+    compile fileTree(dir: 'libs', include: '*.jar')    
+  }
+}
