--- a/.travis.yml
+++ b/.travis.yml
@@ -43,9 +43,9 @@ before_install:
   # - emulator -avd test -no-skin -no-audio -no-window &
 
 before_script:
-  # - chmod +x ci/wait_for_emulator.sh
-  # - ci/wait_for_emulator.sh
-  # - adb shell input keyevent 82 &
+  - chmod +x ci/wait_for_emulator.sh
+  - ci/wait_for_emulator.sh
+  - adb shell input keyevent 82 &
 
 script:
   - gradle connectedCheck
