--- a/android-application/ChineseCheckers/build.gradle
+++ b/android-application/ChineseCheckers/build.gradle
@@ -19,6 +19,7 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 19
+        testPackageName "ca.brocku.chinesecheckers.tests"
     }
 }
 
