--- a/android-application/ChineseCheckers/src/main/AndroidManifest.xml
+++ b/android-application/ChineseCheckers/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-    <!--<instrumentation-->
-        <!--android:targetPackage="ca.brocku.chinesecheckers"-->
-        <!--android:name="android.test.InstrumentationTestRunner" />-->
+    <instrumentation
+        android:targetPackage="ca.brocku.chinesecheckers"
+        android:name="android.test.InstrumentationTestRunner" />
 
     <application
         android:allowBackup="true"
