--- a/android-application/ChineseCheckers/src/main/AndroidManifest.xml
+++ b/android-application/ChineseCheckers/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="ca.brocku.chinesecheckers.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +27,9 @@
         <activity
             android:name="ca.brocku.chinesecheckers.HotseatConfigurationActivity"
             android:label="@string/title_activity_hotseat_configuration"
-            android:parentActivityName="ca.brocku.chinesecheckers.MainActivity" >
+            android:parentActivityName="ca.brocku.chinesecheckers.MainActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
@@ -33,7 +37,9 @@
         <activity
             android:name="ca.brocku.chinesecheckers.HotseatGameActivity"
             android:label="@string/title_activity_hotseat_game"
-            android:parentActivityName="ca.brocku.chinesecheckers.HotseatConfigurationActivity" >
+            android:parentActivityName="ca.brocku.chinesecheckers.HotseatConfigurationActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="HotseatConfigurationActivity" />
