--- a/android-application/ChineseCheckers/src/main/AndroidManifest.xml
+++ b/android-application/ChineseCheckers/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         <activity
             android:name="ca.brocku.chinesecheckers.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,8 +27,7 @@
             android:name="ca.brocku.chinesecheckers.HotseatConfigurationActivity"
             android:label="@string/title_activity_hotseat_configuration"
             android:parentActivityName="ca.brocku.chinesecheckers.MainActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation">
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
@@ -38,8 +36,7 @@
             android:name="ca.brocku.chinesecheckers.HotseatGameActivity"
             android:label="@string/title_activity_hotseat_game"
             android:parentActivityName="ca.brocku.chinesecheckers.HotseatConfigurationActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation">
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="HotseatConfigurationActivity" />
