trying to fix travis-ci build

--- a/android-application/ChineseCheckers/build.gradle
+++ b/android-application/ChineseCheckers/build.gradle
@@ -22,6 +22,9 @@ android {
         testPackageName "ca.brocku.chinesecheckers.tests"
     }
 
+    lintOptions {
+        checkReleaseBuilds false
+    }
 }
 
 dependencies {
