--- a/android-application/ChineseCheckers/src/main/AndroidManifest.xml
+++ b/android-application/ChineseCheckers/src/main/AndroidManifest.xml
@@ -27,8 +27,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="ca.brocku.chinesecheckers.HotseatConfigurationActivity"
-            android:label="@string/title_activity_hotseat_configuration"
+            android:name="ca.brocku.chinesecheckers.OfflineConfigurationActivity"
+            android:label="@string/title_activity_offline_configuration"
             android:parentActivityName="ca.brocku.chinesecheckers.MainActivity"
             android:screenOrientation="portrait">
             <meta-data
@@ -36,13 +36,13 @@
                 android:value="MainActivity" />
         </activity>
         <activity
-            android:name="ca.brocku.chinesecheckers.HotseatGameActivity"
-            android:label="@string/title_activity_hotseat_game"
-            android:parentActivityName="ca.brocku.chinesecheckers.HotseatConfigurationActivity"
+            android:name="ca.brocku.chinesecheckers.OfflineGameActivity"
+            android:label="@string/title_activity_offline_game"
+            android:parentActivityName="ca.brocku.chinesecheckers.OfflineConfigurationActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="HotseatConfigurationActivity" />
+                android:value="OfflineConfigurationActivity" />
         </activity>
     </application>
 
