--- a/android-application/ChineseCheckers/src/main/AndroidManifest.xml
+++ b/android-application/ChineseCheckers/src/main/AndroidManifest.xml
@@ -7,9 +7,10 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
+
     <instrumentation
-        android:targetPackage="ca.brocku.chinesecheckers"
-        android:name="android.test.InstrumentationTestRunner" />
+        android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="ca.brocku.chinesecheckers" />
 
     <application
         android:allowBackup="true"
@@ -19,7 +20,7 @@
         <activity
             android:name="ca.brocku.chinesecheckers.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,7 +31,7 @@
             android:name="ca.brocku.chinesecheckers.OfflineConfigurationActivity"
             android:label="@string/title_activity_offline_configuration"
             android:parentActivityName="ca.brocku.chinesecheckers.MainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
@@ -39,10 +40,18 @@
             android:name="ca.brocku.chinesecheckers.OfflineGameActivity"
             android:label="@string/title_activity_offline_game"
             android:parentActivityName="ca.brocku.chinesecheckers.OfflineConfigurationActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="OfflineConfigurationActivity" />
+        </activity>
+        <activity
+            android:name="ca.brocku.chinesecheckers.HelpActivity"
+            android:label="@string/title_activity_help"
+            android:parentActivityName="ca.brocku.chinesecheckers.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
         </activity>
     </application>
 
