--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ before_script:
   - chmod +x ci/wait_for_emulator.sh
   - ci/wait_for_emulator.sh
   - adb shell input keyevent 82 &
+  - adb shell input keyevent 82 &
 
 script:
   - gradle connectedCheck
