--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk: oraclejdk7
 env:
   matrix:
-    - ANDROID_SDKS=android-19,sysimg-19  ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
+    - ANDROID_SDKS=android-19,sysimg-19 ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
 before_install:
   - ls -l
   - cd android-application
@@ -40,12 +40,13 @@ before_install:
 
   # Create and start emulator
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio &
+  - emulator -avd test -no-skin -no-audio -no-window &
 
 before_script:
   - chmod +x ci/wait_for_emulator.sh
   - ci/wait_for_emulator.sh
-  - adb shell input keyevent 82 &
+  - adb shell input keyevent 1
+  
 
 script:
   - gradle connectedCheck
