Working push notifications.

--- a/android-application/ChineseCheckers/build.gradle
+++ b/android-application/ChineseCheckers/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.0"
+    buildToolsVersion '19.0.0'
 
     defaultConfig {
         minSdkVersion 14
@@ -26,4 +26,6 @@ android {
 
 dependencies {
     compile files('libs/android-support-v4.jar')
+    compile 'com.google.android.gms:play-services:4.2.42'
+    compile 'de.greenrobot:eventbus:2.2.0'
 }
