--- a/android-application/ChineseCheckers/src/main/AndroidManifest.xml
+++ b/android-application/ChineseCheckers/src/main/AndroidManifest.xml
@@ -8,6 +8,15 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+    <permission android:name="ca.brocku.chinesecheckers.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="ca.brocku.chinesecheckers.permission.C2D_MESSAGE" />
+
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
         android:targetPackage="ca.brocku.chinesecheckers" />
@@ -17,6 +26,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name="ca.brocku.chinesecheckers.MainActivity"
             android:label="@string/app_name"
@@ -72,6 +85,15 @@
             android:name="android.support.PARENT_ACTIVITY"
             android:value="MainActivity" />
         </activity>
+
+        <!-- GCM Receiver -->
+        <receiver android:name="ca.brocku.chinesecheckers.network.gcm.GcmBroadcastReceiver">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="com.example.gcm" />
+            </intent-filter>
+        </receiver>
+        <service android:name="ca.brocku.chinesecheckers.network.gcm.GcmIntentService" />
     </application>
 
 </manifest>
