--- a/android-application/ChineseCheckers/src/main/AndroidManifest.xml
+++ b/android-application/ChineseCheckers/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -94,6 +95,7 @@
             </intent-filter>
         </receiver>
         <service android:name="ca.brocku.chinesecheckers.network.gcm.GcmIntentService" />
+        <service android:name="com.octo.android.robospice.JacksonSpringAndroidSpiceService" />
     </application>
 
 </manifest>
