--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk: oraclejdk7
 env:
   matrix:
-    - ANDROID_SDKS=android-19,sysimg-19  ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
+    - ANDROID_SDKS=android-19,sysimg-19 ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
 before_install:
   - ls -l
   - cd android-application
@@ -35,18 +35,31 @@ before_install:
   - echo yes | android update sdk --filter android-18 --no-ui --force > /dev/null
   - echo yes | android update sdk --filter android-19 --no-ui --force > /dev/null
   - echo yes | android update sdk --filter sysimg-19 --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter addon-google_apis-google-15 --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter addon-google_apis-google-18 --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter addon-google_apis-google-19 --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter addon-google_apis_x86-google-19 --no-ui --force > /dev/null
   - echo yes | android update sdk --filter extra-android-support --no-ui --force > /dev/null
   - echo yes | android update sdk --filter extra-android-m2repository --no-ui --force > /dev/null
-
-  # Create and start emulator
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
-
-before_script:
-  - chmod +x ci/wait_for_emulator.sh
-  - ci/wait_for_emulator.sh
-  - adb shell input keyevent 1
+  - echo yes | android update sdk --filter extra-google-m2repository --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter extra-google-play_apk_expansion --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter extra-google-google_play_services_froyo --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter extra-google-google_play_services --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter extra-google-play_licensing --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter extra-google-webdriver --no-ui --force > /dev/null
+  
   
 
+  - android list sdk -a --extended
+
+  # Create and start emulator
+  # - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  # - emulator -avd test -no-skin -no-audio -no-window &
+
+before_script:
+  # - chmod +x ci/wait_for_emulator.sh
+  # - ci/wait_for_emulator.sh
+  # - adb shell input keyevent 82 &
+
 script:
-  - gradle connectedCheck
+  - gradle assemble
