--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,22 @@ before_install:
   - echo yes | android update sdk --filter android-18 --no-ui --force > /dev/null
   - echo yes | android update sdk --filter android-19 --no-ui --force > /dev/null
   - echo yes | android update sdk --filter sysimg-19 --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter addon-google_apis-google-15 --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter addon-google_apis-google-18 --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter addon-google_apis-google-19 --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter addon-google_apis_x86-google-19 --no-ui --force > /dev/null
   - echo yes | android update sdk --filter extra-android-support --no-ui --force > /dev/null
   - echo yes | android update sdk --filter extra-android-m2repository --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter extra-google-m2repository --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter extra-google-play_apk_expansion --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter extra-google-google_play_services_froyo --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter extra-google-google_play_services --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter extra-google-play_licensing --no-ui --force > /dev/null
+  - echo yes | android update sdk --filter extra-google-webdriver --no-ui --force > /dev/null
+  
+  
+
+  - android list sdk -a --extended
 
   # Create and start emulator
   # - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
