Changed package name

--- a/android-application/ChineseCheckers/build.gradle
+++ b/android-application/ChineseCheckers/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.octo.android.robospice:robospice:1.4.11'
     compile 'com.octo.android.robospice:robospice-spring-android:1.4.11'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+    compile files('libs/ai.jar')
 }
