--- a/server/server-application/backend-api-server/conf/application.conf
+++ b/server/server-application/backend-api-server/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="%APPLICATION_SECRET%"
+application.secret="xxZ9mqA/k<]LU<Y:;ojTv]^J6hixP<0BL/?Cj>eBH0d[nEFr13FUfpT650;S7]sf"
 
 # The application languages
 # ~~~~~
