--- a/server/server-application/backend-api-server/conf/application.conf
+++ b/server/server-application/backend-api-server/conf/application.conf
@@ -37,6 +37,9 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://127.0.0.1/mydb"
+db.default.user="root"
 
 # Evolutions
 # ~~~~~
